test/sema/pointer-equals-incompatible-pointee-types.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void f(int& a, uint& b) {
	// CHECK: [[@LINE+1]]:8: error: comparison of distinct pointer types ('int&' and 'uint&')
	_ = a === b;
}
